--- a/create-for-you.html
+++ b/create-for-you.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Build - Toggle Nav with Dropdown</title>
+    <title>Popsockets - Create For You</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
@@ -21,7 +21,7 @@
                     <p>Menu</p>
                 </div>
             </div>
-            
+    
             <nav>
                 <ul class="main-menu">
                     <li>
@@ -49,12 +49,12 @@
                         </ul>
                     </li>
                 </ul>
-            </nav>
-        </div> <!-- end container-->
+        </div>
+        </nav>
     </header>
 
     <section>
-        <h2>Popsockets</h2>
+        <h2>Create For You</h2>
     </section>
 
     <script src="js/main.js"></script>
